fix: update tags colors for proper contrast

--- a/style.css
+++ b/style.css
@@ -169,7 +169,7 @@ h1{
 
 .tag {
     display: inline-block;
-    background: #45e955;
+    background: #e94560;
     padding: 2px 8px;
     font-size: 0.75rem;
     border-radius: 4px;
